--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,23 +12,26 @@ services:
       - ./glpi_backup:/backup
     networks:
       - glpi
+    depends_on:
+      - db-glpi-10
     ports:
       - 80:80
 
-  glpidb:
+  db-glpi-10:   #não mudar - porque é o nome que o script do glpi espera para o banco de dados
     image: percona/percona-server:8.0
-    container_name: db-glpi-10
+    container_name: db-glpi
     networks:
       - glpi
     volumes:
-      - glpi_db_log:/var/log/mysql
-      - glpi_db_lib:/var/lib/mysql
+      - ./glpi_db_log:/var/log/mysql
+      - ./glpi_db_lib:/var/lib/mysql
+      - ./glpi_db_backup:/backup
     environment:
       - MYSQL_ROOT_PASSWORD=ADM@MySQL_GLP1
       - MYSQL_DATABASE=glpi
       - MYSQL_USER=glpi
       - MYSQL_PASSWORD=GLP1_MySQL@10
-      - TZ=America/Sao_Paulo 
+      - TZ=America/Manaus 
   
   glpi-phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -37,15 +40,20 @@ services:
       - glpi
     environment:
       - PMA_ARBITRARY=1
-      - PMA_HOST=glpidb
-      - PMA_USER=glpi
-      - PMA_PASSWORD=GLP1_MySQL@10
+      - PMA_HOST=db-glpi-10
+      - PMA_PORT=3306
+      # limitar o tamano do arquivo de importacao
+      - PHP_UPLOAD_MAX_FILESIZE=1000M
+      - PHP_MAX_INPUT_VARS=100000
+      - PHP_MAX_EXECUTION_TIME=600
+      - PHP_MEMORY_LIMIT=512M
+      - TZ=America/Manaus
     ports:
       - 8080:80
-
-networks:
-  glpi:
-    driver: bridge   
+    
+    depends_on:
+      - db-glpi-10
+    restart: always  # reinicia o phpMyAdmin até conseguir acessar o banco
 
 volumes:
   glpi_config:
@@ -56,3 +64,9 @@ volumes:
   glpi_backup:
   glpi_db_log:
   glpi_db_lib:
+  glpi_db_backup:
+
+#network create --subnet=172.16.0.0/16 glpi
+networks:
+  glpi:
+    external: true   
